# knapsack_ae_api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  app.py
app/models/: __init__.py  kp.py
app/routers/: __init__.py  routes.py
app/transformers/: N_variable_scaler.sav  __init__.py  _autoencoder.py  best_kp_AE_N_variable_2D_tuned_decoder.keras  best_kp_AE_N_variable_2D_tuned_encoder.keras
test/: Random_N_100_R_1000_0.kp  put_example_1000.rest
